--- a/templates/document.html
+++ b/templates/document.html
@@ -8,4 +8,4 @@
     <p>{{line}}</p>
 {% endfor %}
 
-<script src="{{ url_for('js', filename='js/pdfmake.min.js') }}"></script>
+<script src="{{ url_for('static/js', filename='pdfmake.min.js') }}"></script>
