Problem: Flask escapes quotes.

--- a/templates/category.html
+++ b/templates/category.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<title>Category: {{name}}</title>
+<title>Doccu - Category: {{name}}</title>
 <h2>Category: {{name}}</h2>
 <ul>
 {% for item in in_category %}
