--- a/templates/document.html
+++ b/templates/document.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<title>{{title}}</title>
+<title>Doccu - {{title}}</title>
 <style>
 .data-collect {
   position:fixed;
@@ -92,7 +92,7 @@ var docDefinition = {
     '{{descriptor}}',
     { text: 'Preamble', fontSize: 15, pageBreak: 'before' },
     '\n',
-    '{{preamble}}',
+    '{{preamble|e}}',
     '\n',
     { text: 'Document Proper:', fontSize: 15, pageBreak: 'before' },
     '\n',
