--- a/templates/new_document.html
+++ b/templates/new_document.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<title>New Document: {{title}}</title>
+<title>Doccu - New Document: {{title}}</title>
 <form action="/document/new/{{title}}/" method="POST">
 <input name="title" type="text" required placeholder="{{title}}" /><br>
 <input name="date" type="date" required placeholder="Date of Activation." /><br>
