--- a/templates/new_document_submitted.html
+++ b/templates/new_document_submitted.html
@@ -1,3 +1,3 @@
 <!doctype html>
-<title>Form Submitted: {{title}}</title>
-<p>Form submitted for {{title}}</p>
+<title>Doccu - Form Submitted: {{title}}</title>
+<p>Form submitted for <a href="/document/{{filename}}">{{title}}</a></p>
