1 day from test launch

--- a/templates/category.html
+++ b/templates/category.html
@@ -1,8 +1,24 @@
 <!doctype html>
 <title>Doccu - Category: {{name}}</title>
+<style>
+.data-collect {
+  position:fixed;
+  top:2em;
+  right:2em;
+  padding:1em;
+  box-shadow:0 0 8px rgba(128, 128, 128, 0.8);
+	-webkit-box-shadow:0 0 8px rgba(128, 128, 128, 0.8);
+	-moz-box-shadow:0 0 8px rgba(128, 128, 128, 0.8)
+}
+</style>
 <h2>Category: {{name}}</h2>
 <ul>
 {% for item in in_category %}
-    <li><a href="/document/{{url[in_category.index(item)]}}">{{item}}</a></li>
+    <li><a href="/document/{{url[in_category.index(item)]}}">{{ver[in_category.index(item)]}} - {{item}}</a></li>
 {% endfor %}
 </ul>
+
+<div class="data-collect">
+  <p><a href="/">Home</a></p>
+  <p><a href="/document/new/new" target="_blank">New Document</a></p>
+</div>
