--- a/templates/new_document.html
+++ b/templates/new_document.html
@@ -24,5 +24,7 @@ textarea { width: 100%; height: 6em; }
 <textarea name="preamble" required placeholder="Document preamble."></textarea><br>
 <p>Document Proper:</p>
 <textarea id="document-proper" name="document-proper" required placeholder="Document Proper."></textarea><br>
+<p>ID Number:</p>
+<input name="identifier" type="password" required placeholder="ID Number" /><br>
 <input value="Submit" type="submit" />
 </form>
