--- a/templates/document.html
+++ b/templates/document.html
@@ -15,10 +15,13 @@
 <h3>Active: {{date}}</h3>
 <h3>Version: {{version}}</h3>
 <h3>Review: {{renew_date}}</h3>
+<small>Last Edited By: {{userid}}</small>
 <h3>Category: </h3>
 <ul>
 {% for item in category %}
-    <li>{{item}}</li>
+     {% if item !='' %}
+        <li><a href="/category/{{item}}">{{item}}</a></li>
+    {% endif %}
 {% endfor %}
 </ul>
 <hr/>
@@ -34,8 +37,11 @@
 {% endfor %}
 
 <div class="data-collect">
+  <p><a href="/">Home</a></p>
   <input id="clickMe" type="button" value="Download PDF" onclick="pdfMake.createPdf(docDefinition).download('{{version}}_{{title}}_{{date}}');" />
   <p><a href="/document/{{file}}/json" target="_blank">JSON Data</a></p>
+  <p><a href="{{path}}edit">Edit Document</a></p>
+  <p><a href="/document/new/new" target="_blank">New Document</a></p>
 </div>
 
 
@@ -50,7 +56,7 @@ var docDefinition = {
     marginRight: 20,
     marginTop: 20,
     columns: [
-      { text: 'Version: {{version}}'},
+      { text: 'Version: {{version}}, Approved: {{date}}'},
       { text: '{{title}}', alignment: 'right' }
     ]
   },
@@ -69,6 +75,9 @@ var docDefinition = {
     '\n',
     { text: 'Version:', fontSize: 15 },
     '{{version}}',
+    '\n',
+    { text: 'Last Edited By:', fontSize: 8 },
+    { text: '{{userid}}', fontSize: 8 },
     '\n',
     { text: 'Active:', fontSize: 15 },
     '{{date}}',
@@ -97,7 +106,7 @@ var docDefinition = {
     { text: 'Document Proper:', fontSize: 15, pageBreak: 'before' },
     '\n',
     {% for line in content_json %}
-        {% if line == content_json[-1] %}
+        {% if content_json.index(line) == content_json[-1] %}
             '{{line|safe}}'
         {% else %}
             '{{line|safe}}',
