--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,31 @@
 <!doctype html>
 <title>Doccu - Home</title>
-<h1>Policies Under Management:</h1>
+<style>
+.data-collect {
+  position:fixed;
+  top:2em;
+  right:2em;
+  padding:1em;
+  box-shadow:0 0 8px rgba(128, 128, 128, 0.8);
+	-webkit-box-shadow:0 0 8px rgba(128, 128, 128, 0.8);
+	-moz-box-shadow:0 0 8px rgba(128, 128, 128, 0.8)
+}
+</style>
+<h1>Categories:</h1>
 <ul>
-{% for policy in policies %}
-    <li><a href="/document/{{policy_url[policies.index(policy)]}}">{{policy}}</a></li>
+{% for category in categories %}
+    {% if category != '' %}
+        <li><a href="/category/{{category}}">{{category}}</a></li>
+    {% endif %}
 {% endfor %}
 </ul>
+<h1>Policies Under Management:</h1>
+<ul>
+{% for item in policies %}
+    <li><a href="/document/{{policies[item]['url']}}">{{item}}</a></li>
+{% endfor %}
+</ul>
+
+<div class="data-collect">
+  <p><a href="/document/new/new" target="_blank">New Document</a></p>
+</div>
