--- a/templates/new_document_submitted.html
+++ b/templates/new_document_submitted.html
@@ -1,3 +1,6 @@
 <!doctype html>
 <title>Doccu - Form Submitted: {{title}}</title>
 <p>Form submitted for <a href="/document/{{filename}}">{{title}}</a></p>
+<script type="text/javascript">
+  document.location = "/document/{{filename}}";
+</script>
