Windows comaptibility, management console ux, db consistency

--- a/templates/index.html
+++ b/templates/index.html
@@ -27,5 +27,5 @@
 </ul>
 
 <div class="data-collect">
-  <p><a href="/document/new/new" target="_blank">New Document</a></p>
+  <p><a href="/document/new/new">New Document</a></p>
 </div>
