--- a/templates/edit_document.html
+++ b/templates/edit_document.html
@@ -1,19 +1,6 @@
 <!doctype html>
 <title>Doccu - Editing: {{title}}</title>
-<style>
-.data-collect {
-  position:fixed;
-  top:2em;
-  right:2em;
-  padding:1em;
-  box-shadow:0 0 8px rgba(128, 128, 128, 0.8);
-	-webkit-box-shadow:0 0 8px rgba(128, 128, 128, 0.8);
-	-moz-box-shadow:0 0 8px rgba(128, 128, 128, 0.8)
-}
-textarea { width: 100%; height: 6em; }
-#document-proper { height: 16em; }
-#hidden { display:none; }
-</style>
+{% include 'styles.html' %}
 <div class="data-collect">
   <p><a href="/">Home</a></p>
   <p><a href="/document/new/new" target="_blank">New Document</a></p>
