--- a/templates/new_document_submitted.html
+++ b/templates/new_document_submitted.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <title>Doccu - Form Submitted: {{title}}</title>
+{% include 'styles.html' %}
 <p>Form submitted for <a href="/document/{{filename}}">{{title}}</a></p>
 <script type="text/javascript">
   document.location = "/document/{{filename}}";
