--- a/templates/document.html
+++ b/templates/document.html
@@ -1,8 +1,6 @@
 <!doctype html>
 <title>Doccu - {{title}}</title>
 {% include 'styles.html' %}
-<script src="/static/js/marked.min.js"></script>
-
 <h2>Document: {{title}}</h2>
 <h3>Active: {{date}}</h3>
 <h3>Version: {{version}}</h3>
@@ -24,19 +22,7 @@
 {{preamble}}
 <hr/>
 <h3>Document Proper:</h3>
-<div id="markdownContent"></div>
-<script>
-    var content = ""
-    {% for line in content_json %}
-        {% if content_json.index(line) == "[object Window]" %}
-            var content = content + ""
-        {% else %}
-            var content = content + "\n" + "{{line|safe}}"
-        {% endif %}
-    {% endfor %}
-
-    document.getElementById('markdownContent').innerHTML = marked(content);
-</script>
+{{content_markdown|safe}}
 
 <div class="data-collect">
   <p><a href="/">Home</a></p>
