--- a/templates/category.html
+++ b/templates/category.html
@@ -18,7 +18,4 @@
 {% endfor %}
 </ul>
 
-<div class="data-collect">
-  <p><a href="/">Home</a></p>
-  <p><a href="/document/new/new" target="_blank">New Document</a></p>
-</div>
+{% include 'sidebar.html' %}
