--- a/templates/index.html
+++ b/templates/index.html
@@ -16,6 +16,4 @@
 {% endfor %}
 </ul>
 
-<div class="data-collect">
-  <p><a href="/document/new/new">New Document</a></p>
-</div>
+{% include 'sidebar.html' %}
