--- a/templates/new_document_denied.html
+++ b/templates/new_document_denied.html
@@ -1,4 +1,6 @@
 <!doctype html>
 <title>Doccu - New Document: {{title}}</title>
 {% include 'styles.html' %}
+{% include 'sidebar.html' %}
+
 <p>Access Denied</p>
