--- a/templates/styles.html
+++ b/templates/styles.html
@@ -4,6 +4,7 @@
   top:2em;
   right:2em;
   padding:1em;
+  background:#FFF;
   box-shadow:0 0 8px rgba(128, 128, 128, 0.8);
 	-webkit-box-shadow:0 0 8px rgba(128, 128, 128, 0.8);
 	-moz-box-shadow:0 0 8px rgba(128, 128, 128, 0.8)
@@ -14,6 +15,14 @@ textarea { width: 100%; height: 6em; }
 
 @media (min-width: 30em) {
 	body:90%;
+}
+
+@media (max-width: 30em) {
+    .data-collect {
+        position:relative;
+        top:0;
+        right: 0;
+    }
 }
 
 </style>
