--- a/templates/new_document.html
+++ b/templates/new_document.html
@@ -1,5 +1,4 @@
-<!doctype html>
-<title>Doccu - New Document: {{title}}</title>
+{% include 'header.html' %}
 {% include 'styles.html' %}
 {% include 'sidebar.html' %}
 
