--- a/templates/category.html
+++ b/templates/category.html
@@ -1,8 +1,7 @@
-<!doctype html>
-<title>Doccu - Category: {{name}}</title>
+{% include 'header.html' %}
 {% include 'styles.html' %}
 {% include 'sidebar.html' %}
-
+<body>
 <h2>Category: {{name}}</h2>
 <ul>
 {% for item in policies %}
@@ -10,3 +9,4 @@
 {% endfor %}
 </ul>
 
+</body>
