--- a/templates/edit_document.html
+++ b/templates/edit_document.html
@@ -1,8 +1,7 @@
-<!doctype html>
-<title>Doccu - Editing: {{title}}</title>
+{% include 'header.html' %}
 {% include 'styles.html' %}
 {% include 'sidebar.html' %}
-
+<body>
 <form action="/document/{{title}}/edit/" method="POST">
 <p id="hidden">Version Number:</p>
 <input id="hidden" name="version" type="number" required placeholder="Version Number." value="{{version}}" /><br>
@@ -27,3 +26,4 @@
 <input id="identifier" name="identifier" type="password" required placeholder="ID Number" /><br>
 <input value="Submit" type="submit" />
 </form>
+</body>
