--- a/templates/new_document_submitted.html
+++ b/templates/new_document_submitted.html
@@ -1,9 +1,9 @@
-<!doctype html>
-<title>Doccu - Form Submitted: {{title}}</title>
+{% include 'header.html' %}
 {% include 'styles.html' %}
 {% include 'sidebar.html' %}
-
+<body>
 <p>Form submitted for <a href="/document/{{filename}}">{{title}}</a></p>
 <script type="text/javascript">
   document.location = "/document/{{filename}}";
 </script>
+</body>
