--- a/templates/new_document.html
+++ b/templates/new_document.html
@@ -1,4 +1,5 @@
 {% include 'header.html' %}
+<body>
 {% include 'styles.html' %}
 {% include 'sidebar.html' %}
 
@@ -26,3 +27,4 @@
 <input name="identifier" type="password" required placeholder="ID Number" /><br>
 <input value="Submit" type="submit" />
 </form>
+</body>
